@@ -1,10 +1,11 @@
-# $NetBSD: Makefile,v 1.339 2006/11/06 22:01:25 jdolecek Exp $
+# $NetBSD: Makefile,v 1.340 2006/11/13 01:30:52 dan Exp $
 #
 
 COMMENT=	Text processing utilities (does not include desktop publishing)
 
 SUBDIR+=	GutenMark
 SUBDIR+=	GutenMark-words
+SUBDIR+=	Markdown
 SUBDIR+=	aiksaurus
 SUBDIR+=	antiword
 SUBDIR+=	asciidoc
